// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingButton Style tests should render with default styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-9 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-9:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-9:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-9:hover {
  background-color: #D8DDE1;
}

.circuit-9:hover,
.circuit-9:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-9[href] {
  display: inline-block;
}

.circuit-9:disabled,
.circuit-9[disabled] {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-7 {
  position: relative;
}

.circuit-3 {
  opacity: 0;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 24px;
  width: 24px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.circuit-0 {
  width: 100%;
  height: 100%;
}

.circuit-0 > path {
  fill: #FFFFFF;
}

.circuit-0 > path {
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.circuit-5 {
  opacity: 1;
  -webkit-transform: translate(0,0);
  -ms-transform: translate(0,0);
  transform: translate(0,0);
  -webkit-transition: opacity 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: opacity 200ms ease-in-out,transform 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,transform 200ms ease-in-out;
}

<button
  class="circuit-9 circuit-10"
>
  <div
    class="circuit-7 circuit-8"
  >
    <div
      aria-busy="true"
      aria-live="assertive"
      class="circuit-2 circuit-3 circuit-4"
      role="alert"
    >
      <div
        class="circuit-0 circuit-1"
        dark="0"
      >
        spinner.svg
      </div>
    </div>
    <div
      class="circuit-5 circuit-6"
    />
  </div>
</button>
`;

exports[`LoadingButton Style tests should render with default styles after loading has finished 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-9 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-9:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-9:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-9:hover {
  background-color: #D8DDE1;
}

.circuit-9:hover,
.circuit-9:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-9[href] {
  display: inline-block;
}

.circuit-9:disabled,
.circuit-9[disabled] {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-7 {
  position: relative;
}

.circuit-3 {
  opacity: 0;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  height: 24px;
  width: 24px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.circuit-0 {
  width: 100%;
  height: 100%;
}

.circuit-0 > path {
  fill: #FFFFFF;
}

.circuit-0 > path {
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.circuit-5 {
  opacity: 1;
  -webkit-transform: translate(0,0);
  -ms-transform: translate(0,0);
  transform: translate(0,0);
  -webkit-transition: opacity 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: opacity 200ms ease-in-out,transform 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,transform 200ms ease-in-out;
}

<button
  class="circuit-9 circuit-10"
>
  <div
    class="circuit-7 circuit-8"
  >
    <div
      aria-busy="true"
      aria-live="assertive"
      class="circuit-2 circuit-3 circuit-4"
      role="alert"
    >
      <div
        class="circuit-0 circuit-1"
        dark="0"
      >
        spinner.svg
      </div>
    </div>
    <div
      class="circuit-5 circuit-6"
    />
  </div>
</button>
`;

exports[`LoadingButton Style tests should render with loading styles 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate3d(0,0,1,0deg);
    -ms-transform: rotate3d(0,0,1,0deg);
    transform: rotate3d(0,0,1,0deg);
  }

  100% {
    -webkit-transform: rotate3d(0,0,1,360deg);
    -ms-transform: rotate3d(0,0,1,360deg);
    transform: rotate3d(0,0,1,360deg);
  }
}

.circuit-7 {
  position: relative;
}

.circuit-0 {
  width: 100%;
  height: 100%;
}

.circuit-0 > path {
  fill: #FFFFFF;
}

.circuit-0 > path {
  -webkit-animation: animation-0 1s infinite linear;
  animation: animation-0 1s infinite linear;
  -webkit-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
}

.circuit-9 {
  background-color: #FAFBFC;
  border-color: #D8DDE1;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: inset 0 1px 0 1px rgba(255,255,255,0.06);
  display: block;
  color: #5C656F;
  cursor: pointer;
  font-weight: 700;
  width: auto;
  height: auto;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  line-height: 24px;
  padding: calc(8px - 0px) calc(24px - 0px);
  overflow-y: hidden;
  pointer-events: none;
}

.circuit-9:active {
  background-color: #D8DDE1;
  border-color: #9DA7B1;
  box-shadow: inset 0 4px 8px 0 rgba(12,15,20,0.3);
}

.circuit-9:focus {
  border-color: #9DA7B1;
  border-width: 2px;
  outline: 0;
  padding: calc(8px - 1px) calc(24px - 1px);
}

.circuit-9:hover {
  background-color: #D8DDE1;
}

.circuit-9:hover,
.circuit-9:active {
  border-color: #9DA7B1;
  border-width: 1px;
  padding: calc(8px - 0px) calc(24px - 0px);
}

.circuit-9[href] {
  display: inline-block;
}

.circuit-9:disabled,
.circuit-9[disabled] {
  opacity: 0.4;
  pointer-events: none;
  -webkit-user-selectable: none;
  -moz-user-selectable: none;
  -ms-user-selectable: none;
  user-selectable: none;
}

.circuit-3 {
  opacity: 0;
  max-width: -webkit-fit-content;
  max-width: -moz-fit-content;
  max-width: fit-content;
  position: relative;
  -webkit-transition: opacity 200ms ease-in-out;
  transition: opacity 200ms ease-in-out;
  opacity: 1;
  height: 24px;
  width: 24px;
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
}

.circuit-5 {
  opacity: 1;
  -webkit-transform: translate(0,0);
  -ms-transform: translate(0,0);
  transform: translate(0,0);
  -webkit-transition: opacity 200ms ease-in-out,-webkit-transform 200ms ease-in-out;
  -webkit-transition: opacity 200ms ease-in-out,transform 200ms ease-in-out;
  transition: opacity 200ms ease-in-out,transform 200ms ease-in-out;
  opacity: 0;
  -webkit-transform: translate(0,100%);
  -ms-transform: translate(0,100%);
  transform: translate(0,100%);
}

<button
  class="circuit-9 circuit-10"
>
  <div
    class="circuit-7 circuit-8"
  >
    <div
      aria-busy="true"
      aria-live="assertive"
      class="circuit-2 circuit-3 circuit-4"
      role="alert"
    >
      <div
        class="circuit-0 circuit-1"
        dark="0"
      >
        spinner.svg
      </div>
    </div>
    <div
      class="circuit-5 circuit-6"
    />
  </div>
</button>
`;
